...
    "appLists.discardChangesAction" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Discard Changes"
          }
        }
      }
    },
    "appLists.discardChangesConfirmationTitle" : {
      "extractionState" : "manual",
...
    "appLists.libraryDeleteButtonLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete"
          }
        }
      }
    },
    "appLists.libraryDeletionBlockedAlertMessage" : {
      "extractionState" : "manual",
...
    "ruleDetail.disableAction" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Disable"
          }
        }
      }
    },
    "ruleDetail.disableConfirmationMessage" : {
      "extractionState" : "manual",
...
    "ruleDetail.enableAction" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enable"
          }
        }
      }
    },
    "ruleDetail.forThisLongRowLabel" : {
      "extractionState" : "manual",
...
    "ruleDetail.pauseFor15MinutesAction" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pause for 15 minutes"
          }
        }
      }
    },
    "ruleDetail.pausingAllowedRowLabel" : {
      "extractionState" : "manual",
...
    "ruleDraft.validationFailedTitle" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Unable to save"
          }
        }
      }
    },
    "ruleDraft.validationStartEndTimesTooCloseMessage" : {
      "extractionState" : "manual",
...
